<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FriendsFragment">

    <Button
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:backgroundTint="@color/dark_lilac"
        />
    <Button
        android:id="@+id/requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requests"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/friends"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/sharing"
        />
    <Button
        android:id="@+id/sharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/requests"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/add_friend"
        app:layout_constraintTop_toBottomOf="@+id/friends"
        android:backgroundTint="@color/light_gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentLeft="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>